fixed overflow_x

--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ figure {
     top: 0;
     left: 0;
     overflow-y: hidden;
+    overflow-x: hidden;
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
